--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "react": "^18.2.0",
       "react-bootstrap": "^2.7.2",
       "react-dom": "^18.2.0",
+      "react-icons": "^4.8.0",
       "react-router-dom": "^6.9.0",
       "react-scripts": "5.0.1",
       "styled-components": "^5.3.9",
@@ -21,7 +22,8 @@
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "dataBase": "json-server --watch db.json --port 4000"
    },
    "eslintConfig": {
       "extends": [
