--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "@testing-library/user-event": "^13.5.0",
       "axios": "^1.3.4",
       "bootstrap": "^5.2.3",
+      "js-cookie": "^3.0.1",
       "json-server": "^0.17.2",
       "react": "^18.2.0",
       "react-bootstrap": "^2.7.2",
@@ -15,6 +16,7 @@
       "react-icons": "^4.8.0",
       "react-router-dom": "^6.9.0",
       "react-scripts": "5.0.1",
+      "react-toastify": "^9.1.1",
       "styled-components": "^5.3.9",
       "web-vitals": "^2.1.4"
    },
